--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
 
       main {
-        position: absolute;
+        position: fixed;
         width: 100%;
         height: 100%;
       }
