build: update dependencies
- fix new ray.hitTestPlane signature

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <main></main>
-    <script async src="web_modules/es-module-shims.js"></script>
+    <script async src="web_modules/es-module-shims.js" type="module"></script>
     <script src="web_modules/import-map.json" type="importmap-shim"></script>
 
     <script type="module-shim" src="./example/index.js"></script>
